# mcp-loxone

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDENTIAL_MIGRATION_GUIDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.sse  LANDING_PAGE_PROPOSAL.md  LICENSE  MIGRATION.md  Makefile  OPENCODE_INTEGRATION.md  OPENCODE_QUICK_SETUP.md  PUBLICATION_GUIDE.md  QUICKSTART.md  README.md  REALITY_CHECK_2025.md  REFACTORING_ACTIONS.md  REFACTORING_EXAMPLES.md  REFACTORING_PLAN.md  SECURITY.md  SETUP_GUIDE.md  SSE_N8N_INTEGRATION.md  TESTING_STRATEGY.md  TEST_ORGANIZATION_SUMMARY.md  build.rs  claude_desktop_config.json.example  docker-compose.sse.yml  docker-compose.ssl.yml  find_loxone_by_mac.py  fix_ci_validation.py  flake.nix  index.html  (+13 more)
examples/hello-world-mcp/: Cargo.toml
examples/hello-world-mcp/src/: main.rs
loxone-mcp-rust/: .dockerignore  .env.example  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DIAGRAMS.md  CACHE_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMPLETE_ARCHITECTURE_AUDIT.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS.md  CURRENT_STATUS.md  Cargo-wasip2.toml  Cargo-wasm.toml  Cargo.toml  Dockerfile  EXHAUSTIVE_TODO_LIST.md  FIX_SUMMARY.md  GENERIC_COMPONENTS_ANALYSIS.md  IMPLEMENTATION_PLAN.md  INFISICAL_LOCAL_SETUP.md  INFISICAL_SETUP.md  LOCAL_QUICKSTART.md  LOXONE_STATISTICS.md  MCP_INSPECTOR_SETUP.md  MCP_INSPECTOR_TEST.md  Makefile  NOTICE  PUBLICATION_GUIDE.md  README-WASM.md  README.md  README_UTILITIES.md  RMCP_MIGRATION_ANALYSIS.md  UNIFIED_HISTORY_ARCHITECTURE.md  WISHLIST.md  book.toml  build-wasm.sh  build.rs  cargo-build-sign.sh  create-keychain.sh  debug-inspector.sh  debug_mcp_response.py  (+30 more)
loxone-mcp-rust/.githooks/: pre-commit
loxone-mcp-rust/.github/: README.md
loxone-mcp-rust/.github/workflows/: ci.yml  integration-tests.yml  release.yml  rust.yml  wasm-test.yml
loxone-mcp-rust/config/: keys.example.toml
loxone-mcp-rust/docs/: API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION.md  DEPLOYMENT.md  DEVELOPMENT.md  MCP_FRAMEWORK_INTEGRATION_GUIDE.md  README.md  RESOURCES.md  SECURITY_ARCHITECTURE.md  SUMMARY.md  TOKEN_AUTHENTICATION.md  custom.css  index.md  security.md  tools_reference.md
loxone-mcp-rust/examples/: audit_logging_demo.rs  auth_method_demo.rs  command_queue_demo.rs  consent_flow_demo.rs  discovery_cache_demo.rs  health_check.rs  request_tracking.rs  response_optimization.rs  streaming_parser_demo.rs  test_discovery.rs  websocket_demo.rs
loxone-mcp-rust/examples/hello-world-mcp/: Cargo.toml
loxone-mcp-rust/examples/loxone-mcp/: Cargo.toml
loxone-mcp-rust/integration_tests/: README.md  requirements.txt  test_mcp_server.sh
loxone-mcp-rust/mcp-foundation/: Cargo.toml
loxone-mcp-rust/mcp-foundation/src/: error.rs  lib.rs  model.rs  server.rs  service.rs
loxone-mcp-rust/mcp-framework/: README.md
loxone-mcp-rust/mcp-framework/mcp-auth/: Cargo.toml  README.md
loxone-mcp-rust/mcp-framework/mcp-cli/: Cargo.toml
loxone-mcp-rust/mcp-framework/mcp-cli-derive/: Cargo.toml
loxone-mcp-rust/mcp-framework/mcp-logging/: Cargo.toml  README.md
loxone-mcp-rust/mcp-framework/mcp-monitoring/: Cargo.toml  README.md
loxone-mcp-rust/mcp-framework/mcp-protocol/: Cargo.toml  README.md
loxone-mcp-rust/mcp-framework/mcp-security/: Cargo.toml  README.md
loxone-mcp-rust/mcp-framework/mcp-server/: Cargo.toml  README.md
loxone-mcp-rust/mcp-framework/mcp-transport/: Cargo.toml  README.md
loxone-mcp-rust/scripts/: publish-remaining-crates.sh
loxone-mcp-rust/src/: audit_log.rs  crypto.rs  discovery.rs  error.rs  http_transport.rs  lib.rs  main.rs  mcp_consent.rs  mcp_server.rs  mdns_discovery.rs  network_discovery.rs  server.rs  shared_styles.rs  simple_server.rs  test_subscription_integration.rs  validation.rs  wasm.rs  wasm_component.rs
loxone-mcp-rust/src/auth/: manager.rs  middleware.rs  mod.rs  models.rs  security.rs  storage.rs  validation.rs
loxone-mcp-rust/src/client/: auth.rs  command_queue.rs  http_client.rs  mod.rs  streaming_parser.rs  token_http_client.rs  websocket_client.rs
loxone-mcp-rust/src/config/: credentials.rs  infisical_client.rs  macos_keychain.rs  mod.rs  security_keychain.rs  sensor_config.rs  wasi_keyvalue.rs
loxone-mcp-rust/src/discovery/: device_discovery.rs  discovery_cache.rs  mdns.rs  network.rs
loxone-mcp-rust/src/framework_integration/: adapters.rs  backend.rs  mod.rs
loxone-mcp-rust/src/health/: checks.rs  diagnostics.rs  endpoints.rs  mod.rs  monitoring.rs
loxone-mcp-rust/src/history/: architecture_diagram.txt  cold_storage.rs  config.rs  core.rs  dashboard.rs  dashboard_api.rs  dashboard_integration_example.rs  dynamic_dashboard.rs  events.rs  example_implementation.rs  hot_storage.rs  migration_roadmap.md  mod.rs  query.rs  tiering.rs
loxone-mcp-rust/src/http_transport/: admin_api.rs  admin_keys_ui.rs  authentication.rs  dashboard_data.rs  dashboard_data_unified.rs  dashboard_performance.rs  fast_dashboard.rs  navigation_new.rs  rate_limiting.rs  state_api.rs
loxone-mcp-rust/src/logging/: metrics.rs  structured.rs
loxone-mcp-rust/src/mock/: mod.rs
loxone-mcp-rust/src/monitoring/: clean_dashboard.rs  dashboard.rs  influxdb.rs  key_management_ui.rs  key_management_ui_new.rs  loxone_stats.rs  metrics.rs  mod.rs  server_metrics.rs  unified_collector.rs  unified_dashboard.rs  unified_dashboard_new.rs
loxone-mcp-rust/src/performance/: analyzer.rs  metrics.rs  middleware.rs  mod.rs  (+2 more)
loxone-mcp-rust/tests/: audit_log_tests.rs  auth_method_tests.rs  command_queue_tests.rs  consent_flow_tests.rs  device_tools_tests.rs  discovery_cache_tests.rs  error_handling_tests.rs  integration_tests.rs  llm_integration_tests.rs  logging_tests.rs.disabled  new_tools_tests.rs  parallel_execution_tests.rs.disabled  resource_tests.rs  sensor_tools_tests.rs  streaming_parser_tests.rs  test_utilities.rs  tool_resource_integration_tests.rs  unit_tests.rs  validation_middleware_tests.rs  validation_tests.rs.disabled  wasm_tests.rs  websocket_tests.rs
loxone-mcp-rust/wit/: loxone-mcp.wit
(+401 files in other folders)
