[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loxone-mcp-server"
version = "0.1.0"
description = "MCP server for Loxone Generation 1 home automation control"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "loxone", "home-automation", "smart-home"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "keyring>=24.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-loxone-gen1"
Issues = "https://github.com/yourusername/mcp-loxone-gen1/issues"

[project.scripts]
loxone-mcp = "loxone_mcp:run"

[tool.hatch.build.targets.wheel]
packages = ["src/loxone_mcp"]
