[package]
name = "hello-world-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier"]
description = "Minimal MCP server example using the framework"

[dependencies]
pulseengine-mcp-protocol = "0.4.0"
pulseengine-mcp-server = "0.4.0"
pulseengine-mcp-auth = "0.4.0"
pulseengine-mcp-transport = "0.4.0"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }