[package]
name = "hello-world-mcp"
version = "0.1.0"
edition = "2024"
authors = ["Ralf Anton Beier"]
description = "Minimal MCP server example using the framework"

[dependencies]
pulseengine-mcp-macros = "0.17.0"
pulseengine-mcp-server = "0.17.0"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }