[package]
name = "mcp-foundation"
version = "0.1.0"
edition = "2021"
description = "Custom MCP (Model Context Protocol) foundation library for Loxone integration"
license = "MIT"
authors = ["Loxone MCP Team"]

[dependencies]
# Core dependencies for async and serialization
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

# For stdio transport
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }

[features]
default = ["stdio"]
stdio = []