[package]
name = "hello-world-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier"]
description = "Minimal MCP server example using the framework"

[dependencies]
mcp-protocol = { path = "../../mcp-framework/mcp-protocol" }
mcp-server = { path = "../../mcp-framework/mcp-server" }
mcp-auth = { path = "../../mcp-framework/mcp-auth" }
mcp-transport = { path = "../../mcp-framework/mcp-transport" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }