[package]
name = "loxone-mcp"
version = "0.1.0"
edition = "2021"
description = "Loxone MCP Server using the separated framework"

[dependencies]
# MCP Framework
mcp-server = { path = "../../mcp-framework/mcp-server" }
mcp-transport = { path = "../../mcp-framework/mcp-transport" }
mcp-auth = { path = "../../mcp-framework/mcp-auth" }

# Loxone Backend
loxone-backend = { path = "../../loxone-backend" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

[[bin]]
name = "loxone-mcp"
path = "src/main.rs"