[package]
name = "mcp-auth"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier"]
license = "MIT"
description = "Authentication and authorization framework for MCP servers"
repository = "https://github.com/ralphbeier/loxone-mcp-rust"
keywords = ["mcp", "authentication", "authorization", "security"]
categories = ["authentication", "web-programming"]

[dependencies]
mcp-protocol = { path = "../mcp-protocol" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

keyring = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"